--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "vite": "^4.2.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "tailwindcss": "^3.2.7",
     "postcss": "^8.4.14",
     "autoprefixer": "^10.4.7"
